# CVonRAG

./: .env.example  .gitignore  DEVELOPER.md  Dockerfile  README.md  docker-compose.yml  kaggle_pipeline_test.py  pyproject.toml
app/: __init__.py  auth.py  chains.py  config.py  db.py  main.py  models.py  parser.py  recommender.py  vector_store.py
docs/: DEVELOPER.md
frontend/: .env.example  jsconfig.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js  sampleJDs.js  stores.js
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
frontend/static/: sample-biodata.docx
scripts/: build_eval_set.py  evaluate.py  ingest_pdfs.py  inspect_fabrications.py  parse_biodata.py
tests/: conftest.py  eval_set.json  test_api.py  test_auth.py  test_chains.py  test_char_limit_stress.py  test_integration.py  test_invites.py  test_models.py  test_parser.py  test_recommender.py  test_vector_store.py
