[project]
name            = "cvonrag"
version         = "1.0.0"
description     = "RAG-powered resume bullet optimizer — Ollama/Qwen edition, 100% free"
readme          = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httptools==0.6.4",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "qdrant-client==1.12.1",
    "anyio==4.7.0",
    "python-dotenv==1.0.1",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
]

# Platform-specific dependencies
[project.optional-dependencies]
unix = [
    "uvloop==0.21.0",
]
scripts = [
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "rich>=13.0",
    "tqdm>=4.0",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "anyio[trio]==4.7.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode   = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "-v --tb=short --strict-markers"
markers        = [
    "slow: tests that take > 5 seconds",
    "requires_ollama: needs a live Ollama instance",
    "requires_qdrant: needs a live Qdrant instance",
]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = false
ignore_missing_imports = true
